секция Баннер - десктоп, плншет, мобилка

--- a/index.html
+++ b/index.html
@@ -717,7 +717,8 @@
         </section> -->
         <!--—END ADVANTAGES SECTION-->
         <!--—BEGIN WORKFLOW GALLERY-->
-        <section class="workflow-gallery">
+        <!-- <section class="workflow-gallery">
+            <h2 class="visually-hidden">Галерея рабочего процесса</h2>
             <div class="workflow-gallery__swiper">
                 <div class="swiper mySwiper workflowGallery workflow-gallery__wrap">
                     <div class="swiper-wrapper">
@@ -748,9 +749,23 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--—END WORKFLOW GALLERY-->
+        <!--—BEGINN BANNER-->
+        <!-- <section class="banner">
+            <div class="banner__wrap">
+                <div class="banner__inner container">
+                    <h2 class="banner__title">Доставляем грузы точно в&nbsp;срок, <span> ваш успех начинается
+                            с&nbsp;нас!</span> </h2>
+                    <a class="button button-calc" href="javascript:void(0);">
+                        Рассчитать стоимость <span class="icon icon--right-arrow"></span>
+                    </a>
+                </div>
+            </div>
+        </section> -->
+        <!--—END BANNER-->
     </main>
+
     <!--—BEGIN FOOTER -->
     <footer class="footer">
         <div class="footer__inner container">
