секция слайдер Наши авиапартнеры - десктоп, планшет, мобилка

--- a/index.html
+++ b/index.html
@@ -719,23 +719,23 @@
         <!--—BEGIN WORKFLOW GALLERY-->
         <!-- <section class="workflow-gallery">
             <h2 class="visually-hidden">Галерея рабочего процесса</h2>
-            <div class="workflow-gallery__swiper">
-                <div class="swiper mySwiper workflowGallery workflow-gallery__wrap">
+            <div class="workflow-gallery__wrap">
+                <div class="swiper workflow-gallery__swiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <div class="workflow-gallery__inner">
+                            <div class="workflow-gallery__item">
                                 <img class="workflow-gallery__slide-image" src="./images/workflow-gallery/01.webp"
                                     alt="" width="1920" height="800" loading="lazy">
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="workflow-gallery__inner">
+                            <div class="workflow-gallery__item">
                                 <img class="workflow-gallery__slide-image" src="./images/workflow-gallery/02.webp"
                                     alt="" width="1920" height="800" loading="lazy">
                             </div>
                         </div>
                         <div class="swiper-slide">
-                            <div class="workflow-gallery__inner">
+                            <div class="workflow-gallery__item">
                                 <img class="workflow-gallery__slide-image" src="./images/workflow-gallery/03.webp"
                                     alt="" width="1920" height="800" loading="lazy">
                             </div>
@@ -764,6 +764,72 @@
             </div>
         </section> -->
         <!--—END BANNER-->
+
+        <!--—BEGINN SECTION OUR AIR PARTNERS-->
+        <section class="section airparnets">
+            <h2 class="h2 header-block-on container">
+                Наши <span>авиа партнёры</span>
+            </h2>
+
+            <div class="airparnets__wrap">
+                <div class="swiper airparnets__swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="airparnets__item">
+                                <img class="airparnets__slide-image" src="./images/airparnets/russia.svg" alt=""
+                                    width="300" height="103" loading="lazy">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="airparnets__inner">
+                                <img class="airparnets__slide-image" src="./images/airparnets/s7.svg" alt="" width="300"
+                                    height="103" loading="lazy">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="airparnets__inner">
+                                <img class="airparnets__slide-image" src="./images/airparnets/ua.svg" alt="" width="300"
+                                    height="103" loading="lazy">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="airparnets__inner">
+                                <img class="airparnets__slide-image" src="./images/airparnets/aeroflot.svg" alt=""
+                                    width="300" height="103" loading="lazy">
+                            </div>
+
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="airparnets__inner">
+                                <img class="airparnets__slide-image" src="./images/airparnets/russia.svg" alt=""
+                                    width="300" height="103" loading="lazy">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="airparnets__inner">
+                                <img class="airparnets__slide-image" src="./images/airparnets/s7.svg" alt="" width="300"
+                                    height="103" loading="lazy">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="airparnets__inner">
+                                <img class="airparnets__slide-image" src="./images/airparnets/ua.svg" alt="" width="300"
+                                    height="103" loading="lazy">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="airparnets__inner">
+                                <img class="airparnets__slide-image" src="./images/airparnets/aeroflot.svg" alt=""
+                                    width="300" height="103" loading="lazy">
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <!--—END SECTION OUR AIR PARTNERS-->
     </main>
 
     <!--—BEGIN FOOTER -->
