секция слайдер Отзывы клиентов - десктоп, лаптоп, планшет, мобилка, маленькая молбилка

--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
         <!--—END BANNER-->
 
         <!--—BEGINN SECTION OUR AIR PARTNERS-->
-        <section class="section airparnets">
+        <!-- <section class="section airparnets">
             <h2 class="h2 header-block-on container">
                 Наши <span>авиа партнёры</span>
             </h2>
@@ -828,8 +828,91 @@
                 </div>
             </div>
 
-        </section>
+        </section> -->
         <!--—END SECTION OUR AIR PARTNERS-->
+        <!--—BEGINN SECTION REVIEWS-->
+        <section class="section reviews">
+            <h2 class="visually-hidden">Отзывы клиентов</h2>
+            <div class="reviews__wrap container">
+                <div class="swiper reviews__swiper">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="reviews__item">
+                                <div class="reviews__item-left">
+                                    <img src="./images/reviews/01.png" alt="Клиент Станицкий Михаил"
+                                        class="reviews__item-photo" />
+                                </div>
+                                <div class="reviews__item-right">
+                                    <div class="reviews__item-info">
+                                        <span class="reviews__item-company">ООО "РосАвтоГабарит"</span>
+                                        <p class="reviews__item-name">
+                                            Станицкий Михаил
+                                        </p>
+                                    </div>
+                                    <blockquote class="reviews__item-quote">
+                                        Обычно мы отправляем грузы автотранспортом, но в режиме пандемии и проблем с
+                                        пропусками возникли накладки в доставке грузов. И благодаря компании JAR-CARGO
+                                        наш груз прибыл в кратчайшие сроки.
+                                    </blockquote>
+                                    <a class="button button-calc" href="javascript:void(0);">
+                                        Расчёт стоимости <span class="icon icon--right-arrow"></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="reviews__item">
+                                <div class="reviews__item-left">
+                                    <img src="./images/reviews/02.png" alt="Клиент Оксана Благодатова"
+                                        class="reviews__item-photo" />
+                                </div>
+                                <div class="reviews__item-right">
+                                    <div class="reviews__item-info">
+                                        <span class="reviews__item-company">INTERNATIONAL POST</span>
+                                        <p class="reviews__item-name">
+                                            Оксана Благодатова
+                                        </p>
+                                    </div>
+                                    <blockquote class="reviews__item-quote">
+                                        Именно в условиях резко изменяющегося рынка доставки грузов по миру JAR-CARGO
+                                        дольше всех сохраняет неизменные условия доставки при достаточно высоком
+                                        качестве сервиса.
+                                    </blockquote>
+                                    <a class="button button-calc" href="javascript:void(0);">
+                                        Расчёт стоимости <span class="icon icon--right-arrow"></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="reviews__item">
+                                <div class="reviews__item-left">
+                                    <img src="./images/reviews/03.png" alt="Клиент Иван Корнер"
+                                        class="reviews__item-photo" />
+                                </div>
+                                <div class="reviews__item-right">
+                                    <div class="reviews__item-info">
+                                        <span class="reviews__item-company">Digital logistic ink.</span>
+                                        <p class="reviews__item-name">
+                                            Иван Корнер
+                                        </p>
+                                    </div>
+                                    <blockquote class="reviews__item-quote">
+                                        Мы уже несколько лет успешно сотрудничаем с Яр-Карго и готовы выразить глубочайшее уважение к ответственным сотрудникам вашей компании, желаем вам только увеличивать влияние на нашем рынке.
+                                    </blockquote>
+                                    <a class="button button-calc" href="javascript:void(0);">
+                                        Расчёт стоимости <span class="icon icon--right-arrow"></span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-pagination">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--—END SECTION REVIEWS-->
     </main>
 
     <!--—BEGIN FOOTER -->
