Блок Типы грузов - десктоп, лаптоп, таблетка, мобилка БЕЗ МОДАЛОК И ОВЕРЛЕЯ

--- a/index.html
+++ b/index.html
@@ -131,55 +131,76 @@
             </div>
 
         </section> -->
-        <!--—BEGIN SECTION PROCESS-->
-        <section class="section process">
-            <div class="process__inner container">
-                <h2 class="h2 header-block-on">
-                    Оставляйте заявку.<br>
-                    <span> Посчитаем за час</span>
 
-                </h2>
-                <ul class="process__list">
-                    <div class="process__item process__item--active">
-                        <p class="process__text">Оставляете заявку</p>
-                        <div class="process__circle">
-                            <div class="process__circle-inner"></div>
-                        </div>
-                    </div>
-                    <li class="process__item">
-                        <p class="process__text">Перезваниваем для <br> уточнения деталей</p>
-                        <div class="process__circle">
-                            <div class="process__circle-inner"></div>
-                        </div>
-                    </li>
-                    <li class="process__item">
-                        <p class="process__text">Считаем<br> оптимизированную смету <br>с учётом плана доставки</p>
-                        <div class="process__circle">
-                            <div class="process__circle-inner"></div>
-                        </div>
-                    </li>
-                    <li class="process__item">
-                        <p class="process__text">Контроль на всех<br> этапах</p>
-                        <div class="process__circle">
-                            <div class="process__circle-inner"></div>
+        <!-- BEGIN SECTION CARGO TYPES -->
+        <section class="section cargo-types">
+            <div class="cargo-types__inner container">
+                <div class="cargo-types__header header-block">
+                    <h2 class="cargo-types__title h2"> Ваш груз — <span>наш приоритет</span> </h2>
+                    <p class="cargo-types__subtitle desc">Доставляем крупногабаритные, тяжеловесные грузы<br>
+                        с помощью авиа перевозки</p>
+                </div>
+                <ul class="cargo-types__list">
+                    <li class="cargo-types__item">
+                        <div class="cargo-types__content">
+                            <h3 class="cargo-types__item-title">Тяжеловесный груз</h3>
+                            <span class="cargo-types__item-tag">За 24 часа</span>
+                            <div class="cargo-types__item-description">
+                                <p>Специальные условия для тяжёлых грузов, включая
+                                    оформление спец. рейсов до получателя</p>
+                                <span class="icon icon--right-arrow"> </span>
+                            </div>
                         </div>
                     </li>
-                    <li class="process__item">
-                        <p class="process__text">Запускаем в реализацию</p>
-                        <div class="process__circle">
-                            <div class="process__circle-inner"></div>
+                    <li class="cargo-types__item">
+                        <div class="cargo-types__content">
+                            <h3 class="cargo-types__item-title">Строительная техника и оборудование</h3>
+                            <span class="cargo-types__item-tag">За 24 часа</span>
+                            <div class="cargo-types__item-description">
+                                <span class="icon icon--right-arrow"> </span>
+                            </div>
                         </div>
                     </li>
-                    <li class="process__item">
-                        <p class="process__text">Заключаем договор. <br>Выставляем счёт</p>
-                        <div class="process__circle">
-                            <div class="process__circle-inner"></div>
+                    <li class="cargo-types__item">
+                        <div class="cargo-types__content">
+                            <h3 class="cargo-types__item-title">Продукты</h3>
+                            <span class="cargo-types__item-tag">За 24 часа</span>
+                            <div class="cargo-types__item-description">
+                                <span class="icon icon--right-arrow"> </span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="cargo-types__item">
+                        <div class="cargo-types__content">
+                            <h3 class="cargo-types__item-title">Медикаменты</h3>
+                            <span class="cargo-types__item-tag">За 24 часа</span>
+                            <div class="cargo-types__item-description">
+                                <span class="icon icon--right-arrow"> </span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="cargo-types__item">
+                        <div class="cargo-types__content">
+                            <h3 class="cargo-types__item-title">Животные и&nbsp;цветы</h3>
+                            <span class="cargo-types__item-tag">За 24 часа</span>
+                            <div class="cargo-types__item-description">
+                                <span class="icon icon--right-arrow"> </span>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="cargo-types__item">
+                        <div class="cargo-types__content">
+                            <h3 class="cargo-types__item-title">Различное оборудование</h3>
+                            <span class="cargo-types__item-tag">За 24 часа</span>
+                            <div class="cargo-types__item-description">
+                                <span class="icon icon--right-arrow"> </span>
+                            </div>
                         </div>
                     </li>
                 </ul>
             </div>
         </section>
-        <!--—END SECTION PROCESS-->
+        <!-- END SECTION CARGO TYPES -->
     </main>
 
     <!--—BEGIN FOOTER -->
