Блок Типы грузов - оверлей АДАПТИВЫ

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                     </li>
                 </ul>
 
-                <!-- Модальные окна -->
+                <!-- Modal windows -->
                 <div id="modal-1" class="cargo-types__modal modal">
                     <div class="cargo-types__wrapper container">
                         <div class=" cargo-types__modal-inner ">
@@ -415,8 +415,8 @@
                             </ol>
 
                         </div>
-                        <a class="cargo-types__modal-close" href="javascript:void(0);"><img src="./icons/close.svg"
-                                alt=""></a>
+                        <a class="cargo-types__modal-close icon-close" href="javascript:void(0);">
+                        </a>
                     </div>
                 </div>
 
@@ -426,8 +426,7 @@
                             <h2>Строительная техника и оборудование</h2>
                             <p>Подробное описание строительной техники и оборудования.</p>
                         </div>
-                        <a class="cargo-types__modal-close" href="javascript:void(0);"><img src="./icons/close.svg"
-                                alt=""></a>
+                        <a class="cargo-types__modal-close icon-close" href="javascript:void(0);"></a>
                     </div>
                 </div>
                 <div id="modal-3" class="cargo-types__modal modal">
@@ -436,8 +435,7 @@
                             <h2>Продукты</h2>
                             <p>Подробное описание перевозки продуктов.</p>
                         </div>
-                        <a class="cargo-types__modal-close" href="javascript:void(0);"><img src="./icons/close.svg"
-                                alt=""></a>
+                        <a class="cargo-types__modal-close icon-close" href="javascript:void(0);"></a>
                     </div>
                 </div>
                 <div id="modal-4" class="cargo-types__modal modal">
@@ -446,8 +444,7 @@
                             <h2>Медикаменты</h2>
                             <p>Подробное описание перевозки медикаментов.</p>
                         </div>
-                        <a class="cargo-types__modal-close" href="javascript:void(0);"><img src="./icons/close.svg"
-                                alt=""></a>
+                        <a class="cargo-types__modal-close icon-close" href="javascript:void(0);"></a>
                     </div>
                 </div>
                 <div id="modal-5" class="cargo-types__modal modal">
@@ -456,8 +453,7 @@
                             <h2>Животные и цветы</h2>
                             <p>Подробное описание перевозки животных и цветов.</p>
                         </div>
-                        <a class="cargo-types__modal-close" href="javascript:void(0);"><img src="./icons/close.svg"
-                                alt=""></a>
+                        <a class="cargo-types__modal-close icon-close" href="javascript:void(0);"></a>
                     </div>
                 </div>
                 <div id="modal-6" class="cargo-types__modal modal">
@@ -466,13 +462,10 @@
                             <h2>Различное оборудование</h2>
                             <p>Подробное описание перевозки различного оборудования.</p>
                         </div>
-                        <a class="cargo-types__modal-close" href="javascript:void(0);"><img src="./icons/close.svg"
-                                alt=""></a>
+                        <a class="cargo-types__modal-close icon-close" href="javascript:void(0);"></a>
                     </div>
                 </div>
-                <!-- Модальные окна -->
-
-
+                <!-- Modal windows-->
             </div>
         </section>
         <!-- END SECTION CARGO TYPES -->
