Блок Футер - адаптивы

--- a/index.html
+++ b/index.html
@@ -138,15 +138,18 @@
     <!--—BEGIN FOOTER -->
     <footer class="footer">
         <!-- Верхняя часть -->
-        <div class="footer__top container">
-            <a class="footer__logo logo" href="/" title="Home" aria-label="Home">
-                <img src="./images/logo.svg" alt="" class="logo__image" width="140" height="32">
-            </a>
-            <a class="button button-calc" href="javascript:void(0);">
-                Расчёт стоимости <span class="icon icon--right-arrow"></span>
-            </a>
+        <div class="container">
+            <div class="footer__top ">
+                <a class="footer__logo logo" href="/" title="Home" aria-label="Home">
+                    <img src="./images/logo.svg" alt="" class="logo__image" width="140" height="32">
+                </a>
+                <a class="button button-calc visible-mobile" href="javascript:void(0);">
+                    Расчёт стоимости <span class="icon icon--right-arrow"></span>
+                </a>
+                <a class=" visible-mobile-only" href="javascript:void(0);"><span class="icon icon--right-arrow"></span>
+                </a>
+            </div>
         </div>
-        <!-- Основная часть -->
         <div class="footer__body container">
             <div class="footer__left">
                 <div class="footer__navigation">
