Блок Первый - десктоп, адаптив БЕЗ АНИМАЦИИ

--- a/index.html
+++ b/index.html
@@ -120,17 +120,29 @@
     </div>
     <!--—END HEADER -->
     <main>
-        <!-- <section class="hero">
-            <div class="hero__main container">
-                <div class="hero__body"></div>
 
-
-                <a href="" class="button button-calc">Расчёт стоимости <span class="icon icon--right-arrow"> <span>
-                </a>
-
+        <section class="hero">
+            <div class="hero__container container">
+                <div class="hero__content">
+                    <div class="hero__header header-block">
+                        <h1 class="hero__title h1"> <span>Срочная доставка </span> тяжёлых
+                            и&nbsp;крупногабаритных грузов за&nbsp;24&nbsp;часа</h1>
+                        <p class="hero__subtitle desc">Организация доставки в&nbsp;любую точку России
+                            и&nbsp;за&nbsp;рубеж&nbsp;&mdash; быстро, безопасно и&nbsp;без лишних затрат</p>
+                    </div>
+                    <a href="javascript:void(0);" class="button button-calc">Расчёт стоимости <span
+                            class="icon icon--right-arrow"> <span>
+                    </a>
+                </div>
             </div>
 
-        </section> -->
+            <div class="hero__media">
+                <video class="hero__video" autoplay muted loop playsinline>
+                    <source src="./video/video.mp4" type="video/mp4">
+                </video>
+                <div class="hero__overlay"></div>
+            </div>
+        </section>
 
 
     </main>
